--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,6 @@ test:
 
 production:
   <<: *default
-  database: omniscient_design_production
-  username: deploy
-  password: ZD34pm
-  host: 127.0.0.1
+  database: omniscientdesigndb
+  username: omniscientdesigndb
+  password: <%= ENV["DATABASE_URL"] %>
