--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,3 +1,3 @@
-aws:
-  access_key_id: your_access_key_id
-  secret_access_key: your_secret_access_key
+recaptcha:
+  site_key: "6LfLCaMqAAAAAGdWN3_BGZL0TuM1Zm_N3sTX_wLm"
+  secret_key: "6LfLCaMqAAAAABqdWSxN5158_BhG7cGjyzsQ5fEE"
