--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,5 @@ node_modules
 # Vite uses dotenv and suggests to ignore local-only env files. See
 # https://vitejs.dev/guide/env-and-mode.html#env-files
 *.local
-log/development.log
-log/development.log
-app/assets/.DS_Store
+.DS_Store
+/log
