--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,6 +1,6 @@
 recaptcha:
   site_key: "6LfLCaMqAAAAAGdWN3_BGZL0TuM1Zm_N3sTX_wLm"
   secret_key: "6LfLCaMqAAAAABqdWSxN5158_BhG7cGjyzsQ5fEE"
-# sendgrid:
-#   username: apikey
-#   api_key: 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
+mailjet:
+  api_secret: b5e19dbfa0a1bdccc723b7521232a47c
+  api_key: 2aa1f08e5481b9f62381406fc517037e
