--- a/config/storage.yml
+++ b/config/storage.yml
@@ -16,6 +16,8 @@ minio_images:
   endpoint: <%= ENV['MINIO_ENDPOINT'] %>
   force_path_style: true
   ssl_verify_peer: false
+  upload:
+    cache_control: "public, max-age=31536000"
 
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
